fix(sample-request): add SLF4J logging, error handling, and fix getter references in controller